Fix a bug where inactive windows would inappropriately take focus.

On Windows, it's not possible to focus a widget without activating the window.
As a result, the semantics for RenderWidgetHostView::Focus include window
activation on all platforms.

The previous implementation for UpdateUIForNavigationInTab would focus the web
contents, even if the window is backgrounded. This would activate the window.
This manifested itself most clearly during session restore for two windows, when
activation would bounce between the two windows, sometimes as many as 10 times!.

The new implementation only focuses the contents if the window is activated, or
about to be activated. If the window is backgrounded, then the appropriate
content will be focused when the user chooses the activate the window.

BUG=634248

Review-Url: https://codereview.chromium.org/2284573004
Cr-Commit-Position: refs/heads/master@{#415472}

Former-commit-id: 0de48e14a7008fa85d9d74439a7dd63b413abb13